# gcloud-mlops-pipeline

./: .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml
data_pipeline/: pyspark_etl.py
k6/: churn_load_test.js
server/: predict.py  requirements.txt
trainer/: Dockerfile  requirements.txt  train.py
trainer/tests/integration/: test_training_serving_flow.py
