[project]
name = "gcloud-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flask>=3.1.1",
    "isort>=6.0.1",
    "joblib>=1.5.1",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
]
